# SImmi-AI

./: .gitignore  Dockerfile  README.md  doc.txt  docker-compose.yml  generate_mock_config.py  main.py  pyproject.toml  requirements.txt  test_db.py
api/: server.py
cli/: doctor.py  main.py  utils.py
config/: .key  config.yaml  personality.yaml  voice.yaml
core/: agent.py  llm.py  logger.py  schemas.py  security.py  supervisor.py  voice.py
core/agents/: base.py  specialized.py
core/evolution/: prompt_optimizer.py  reflection.py  tool_analytics.py
core/orchestrator/: manager.py
core/repair/: manager.py
core/tasks/: models.py
execution/: docker_box.py
integrations/: speech_to_text.py  telegram.py  tts_elevenlabs.py  whatsapp.py
memory/: manager.py  models.py
scheduler/: manager.py
simmi_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: base.py  core_tools.py  project_generator.py
tools/github/: client.py
whatsapp_bridge/: Dockerfile  index.js  package-lock.json  package.json
